--- a/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
+++ b/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
@@ -28,7 +28,7 @@ Description: A two-column, fixed-width template suitable for small business webs
 <div id="header">
 	<div id="logo">
 		<h2><a href="/">Welcome to</a></h2>
-		<h1><a href="/">net LAB</a></h1>
+		<h1><a href="/">TRENDnet LAB</a></h1>
 	</div>
 	<div id="menu">
 		<ul>
