--- a/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
+++ b/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
@@ -27,8 +27,8 @@ Description: A two-column, fixed-width template suitable for small business webs
 <body>
 <div id="header">
 	<div id="logo">
-		<h2><a href="/">Welcome to</a></h2>
-		<h1><a href="/">TRENDnet LAB</a></h1>
+		<h1><a href="/">Welcome To</a></h1>
+		<h2><a href="/">The Beer House.</a></h2>
 	</div>
 	<div id="menu">
 		<ul>
@@ -123,22 +123,7 @@ Description: A two-column, fixed-width template suitable for small business webs
 	<p id="links"><a href="#">Privacy</a> | <a href="#">Terms</a> | <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>
 </div>
 
-<%--original--%>
-<%--<script type="text/javascript" src="/content/scripts/jquery-1.3.2.min.js"></script>--%>
-
-<%--
-Using jQuery with the CDN
-http://www.asp.net/ajax/cdn/#2
-
-You can download jQuery scripts from the CDN and use them in your Web application by adding the following script element to a page: 
-
-    <script src="http://ajax.Microsoft.com/ajax/jquery-1.3.2.js" type="text/javascript"></script>                        
-
-The CDN also includes the minified version of the jQuery script, which you can get using the following element:
-
-    <script src="http://ajax.Microsoft.com/ajax/jquery/jquery-1.3.2.min.js" type="text/javascript"></script>
---%>
-<script src="http://ajax.Microsoft.com/ajax/jquery/jquery-1.3.2.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/content/scripts/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/content/scripts/global.js"></script>
 <script type="text/javascript" src="/content/scripts/poll.js"></script>
 <asp:ContentPlaceHolder ID="ScriptContent" runat="server" />
