--- a/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
+++ b/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
@@ -15,7 +15,7 @@ Description: A two-column, fixed-width template suitable for small business webs
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>The Beer House / <%= Html.Encode(ViewData["PageTitle"]) %></title>
+	<title>TRENDnet Brasil / <%= Html.Encode(ViewData["PageTitle"]) %></title>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />	
 	
@@ -33,8 +33,8 @@ Description: A two-column, fixed-width template suitable for small business webs
 	</div>
 	<div id="menu">
 		<ul>
+			<li><%= Html.ActionLink("News", "Index", "Newsletter") %></li>
 			<li><%= Html.ActionLink("Articles", "Index", "Article") %></li>
-			<li><%= Html.ActionLink("Newletters", "Index", "Newsletter") %></li>
 			<li><%= Html.ActionLink("Polls", "Index", "Poll") %></li>
 			<li><%= Html.ActionLink("Forums", "Index", "Forum") %></li>
 			<li><%= Html.ActionLink("Shop", "Index", "Commerce") %></li>
@@ -83,7 +83,7 @@ Description: A two-column, fixed-width template suitable for small business webs
 			</div>
 		</div>
 	<% } %>
-		<div id="current-poll" class="boxed">
+<%--		<div id="current-poll" class="boxed">
 			<h2 class="title">Current Poll</h2>
 			<div class="content">
 			<% var poll = (new TheBeerHouseDataContext()).Polls.CurrentPoll(); %>
@@ -94,8 +94,8 @@ Description: A two-column, fixed-width template suitable for small business webs
 				<% Html.RenderPartial("~/Views/Shared/Poll/PollResultItem.ascx", poll); %>
 			<% } %>
 			</div>
-		</div>
-<%--		<div id="news" class="boxed">
+		</div>--%>
+		<div id="news" class="boxed">
 			<h2 class="title">News &amp; Events</h2>
 			<div class="content">
 				<ul>
@@ -113,15 +113,15 @@ Description: A two-column, fixed-width template suitable for small business webs
 					</li>
 				</ul>
 			</div>
-		</div>--%>
+		</div>
 	</div>
 	<!-- end sidebar -->
 	<div style="clear: both;">&nbsp;</div>
 </div>
 <!-- end page -->
 <div id="footer">
-	<p id="legal">&copy;2007 Center Stage. All Rights Reserved. Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
-	<p id="links"><a href="#">Privacy</a> | <a href="#">Terms</a> | <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>
+	<p id="legal">&copy;2009 TRENDnet Brasil. Todos os direitos reservados.</a></p>
+	<%--<p id="links"><a href="#">Privacy</a> | <a href="#">Terms</a> | <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>--%>
 </div>
 
 <script type="text/javascript" src="/content/scripts/jquery-1.3.2.min.js"></script>
