Ajuste cores: background footer e contorno de boxes

--- a/TheBeerHouse_MVC/TheBeerHouse/Content/styles/site.css
+++ b/TheBeerHouse_MVC/TheBeerHouse/Content/styles/site.css
@@ -259,7 +259,7 @@ hr {
 
 .boxed .content {
 	padding: 20px;
-	border: 1px solid #97C984;
+	border: 1px solid #99CCFF;
 }
 
 .boxed h3 {
@@ -321,7 +321,7 @@ hr {
 #footer {
 	height: 100px;
 	padding: 20px;
-	background: #5F919E;
+	background: #07367A;
 	border-top: 5px solid #4C747E;
 }
 
