--- a/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
+++ b/TheBeerHouse_MVC/TheBeerHouse/Views/Shared/Site.Master
@@ -19,7 +19,7 @@ Description: A two-column, fixed-width template suitable for small business webs
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />	
 	
-	<link rel="shortcut icon" href="/content/images/favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="/content/styles/site.css" type="text/css" />
 	<link rel="stylesheet" href="/content/styles/modules.css" type="text/css" />
 	
@@ -28,16 +28,20 @@ Description: A two-column, fixed-width template suitable for small business webs
 <body>
 <div id="header">
 	<div id="logo">
-		<h1><a href="/">www.trend.net.br</a></h1>
+		<h1><a href="/">trend.net.br</a></h1>
 		<h2><a href="/">TRENDnet Brasil</a></h2>
 	</div>
 	<div id="menu">
 		<ul>
 			<li><%= Html.ActionLink("News", "Index", "Newsletter") %></li>
+<%--
 			<li><%= Html.ActionLink("Articles", "Index", "Article") %></li>
 			<li><%= Html.ActionLink("Polls", "Index", "Poll") %></li>
+--%>
 			<li><%= Html.ActionLink("Forums", "Index", "Forum") %></li>
+<%--
 			<li><%= Html.ActionLink("Shop", "Index", "Commerce") %></li>
+--%>
 		</ul>
 	</div>
 </div>
@@ -95,7 +99,7 @@ Description: A two-column, fixed-width template suitable for small business webs
 			<% } %>
 			</div>
 		</div>--%>
-		<div id="news" class="boxed">
+<%--		<div id="news" class="boxed">
 			<h2 class="title">News &amp; Events</h2>
 			<div class="content">
 				<ul>
@@ -113,14 +117,14 @@ Description: A two-column, fixed-width template suitable for small business webs
 					</li>
 				</ul>
 			</div>
-		</div>
+		</div>--%>
 	</div>
 	<!-- end sidebar -->
 	<div style="clear: both;">&nbsp;</div>
 </div>
 <!-- end page -->
 <div id="footer">
-	<p id="legal">&copy;2009 TRENDnet Brasil. Todos os direitos reservados.</a></p>
+	<p id="legal">&copy;2010 TRENDnet Brasil. Todos os direitos reservados.</p>
 	<%--<p id="links"><a href="#">Privacy</a> | <a href="#">Terms</a> | <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>--%>
 </div>
 
